--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ numpy==2.1.3
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==24.2
+pillow==11.1.0
 protobuf==5.29.4
 pydantic==2.11.3
 pydantic_core==2.33.1
